--- a/.tmux.conf
+++ b/.tmux.conf
@@ -17,6 +17,9 @@ bind c new-window -ac"#{pane_current_path}"
 bind -n S-Left  previous-window
 bind -n S-Right next-window
 
+# No delay on escape
+set -sg escape-time 0
+
 bind-key J resize-pane -D 5
 bind-key K resize-pane -U 5
 bind-key H resize-pane -L 5
