color column at 80, and more sensible toggle line numbers

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@ set -g default-terminal "screen-256color"
 unbind r
 bind r source-file ~/.tmux.conf
 
+set -g mouse on
+
 # quick pane cycling
 #unbind ^A
 #bind ^A select-pane -t :.+
